# bulk-validator

./: .flake8  models.py  pyproject.toml
