[tool.poetry]
name = "bulk-validator"
version = "0.1.0"
description = "bulk transaction file validator"
authors = ["Li Lin <guru.lin@gmail.com>"]
license = "ASL"

[tool.poetry.dependencies]
python = "^3.7"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.poetry.dev-dependencies]
black = "20.8b1"
flake8 = "^3.8.4"
pytest = "^6.0.0"
pre-commit = "^2.8.2"
isort = "^5.6.4"
autoflake = "^1.4"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
